# ILang-tree-sitter

./: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  go.mod  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-i-lang.pc.in
bindings/c/tree_sitter/: tree-sitter-i-lang.h
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_i_lang/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterILangTests/: TreeSitterILangTests.swift
queries/i_lang/: highlights.scm
snippets/: i_lang.json  package.json
src/: grammar.json  node-types.json  parser.c
