[package]
name = "tree-sitter-i-lang"
description = "Project I for Compilers Construction course"
version = "0.1.0"
authors = ["Maxim Fomin <m.fomin@innopolis.university>"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "i-lang"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/Makcal/ILang-tree-sitter"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.25.8"
